--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,10 +20,51 @@ button {
 }
 
 
+/*Nav Bar Styles*/
 .slogan{
   margin-right: 10px;
 }
 
 .categories{
   color: #BA2B2B;
+}
+
+
+/* Pop up window styles: */
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color:rgba(0,0,0,0.2);
+
+  display: flex;
+  justify-content:center;
+  align-items: center;
+}
+
+.popup-inner{
+  position: relative;
+  padding: 3vh;
+  height: 45vh;
+  width: 100%;
+  max-width: 640px;
+  background-color: #BA2B2B;
+  border-radius: 15px;
+  color: white;
+}
+
+.popup-inner .close-btn {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  color: white;
+  font-size: 17px;
+}
+
+.editForm {
+  display: inline-grid;
+  font-size: 22px;
+  font-weight: bold;
 }
