--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,7 @@
+* {
+  font-family: Montserrat;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -71,4 +75,8 @@ button {
 
 label {
   padding-bottom: 10px;
+}
+
+input {
+  border-radius: 4px;
 }
