--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,8 +4,8 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -14,7 +14,7 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -23,16 +23,14 @@ button {
   border: none;
 }
 
-
 /*Nav Bar Styles*/
-.slogan{
+.slogan {
   margin-right: 10px;
 }
 
-.categories{
-  color: #BA2B2B;
+.categories {
+  color: #ba2b2b;
 }
-
 
 /* Pop up window styles: */
 .popup {
@@ -41,20 +39,20 @@ button {
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color:rgba(0,0,0,0.2);
+  background-color: rgba(0, 0, 0, 0.2);
 
   display: flex;
-  justify-content:center;
+  justify-content: center;
   align-items: center;
 }
 
-.popup-inner{
+.popup-inner {
   position: relative;
   padding: 3vh;
   height: 45vh;
   width: 100%;
   max-width: 640px;
-  background-color: #BA2B2B;
+  background-color: #ba2b2b;
   border-radius: 15px;
   color: white;
 }
